force-app/main/default/objects/WorkExchange__c/fields/Pickup_Preferred_date1_hs__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Preferred_date1_hs__c</fullName>
    <label>引取希望日1</label>
    <type>Date</type>
</CustomField>