force-app/main/default/objects/WorkExchange__c/fields/PickUpDate__c.field-meta.xml
<CustomField>
    <fullName>PickUpDate__c</fullName>
    <description>買取商談[TakeUpDate__c]</description>
    <label>引取日</label>
    <type>Date</type>
</CustomField>