force-app/main/default/objects/WorkExchange__c/fields/PurchaseReception_LOT__c.field-meta.xml
<CustomField>
    <fullName>PurchaseReception_LOT__c</fullName>
    <label>買取受付LOT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>