force-app/main/default/objects/WorkExchange__c/fields/ReceptionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReceptionDateTime__c</fullName>
    <label>受付日時</label>
    <type>DateTime</type>
</CustomField>