force-app/main/default/objects/WorkExchange__c/fields/RecyclingFee__c.field-meta.xml
<CustomField>
    <fullName>RecyclingFee__c</fullName>
    <label>リサイクル料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>