force-app/main/default/objects/WorkExchange__c/fields/RegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNo__c</fullName>
    <label>登録番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>