force-app/main/default/objects/WorkExchange__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>備考</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>