force-app/main/default/objects/WorkExchange__c/fields/SelfPropulsion__c.field-meta.xml
<CustomField>
    <fullName>SelfPropulsion__c</fullName>
    <label>自走</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>