force-app/main/default/objects/WorkExchange__c/fields/StorageLocationPerson__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationPerson__c</fullName>
    <label>保管場所担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>