force-app/main/default/objects/WorkExchange__c/fields/StorageLocationTEL__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationTEL__c</fullName>
    <label>保管場所TEL</label>
    <type>Phone</type>
</CustomField>