force-app/main/default/objects/WorkExchange__c/fields/StorageStatus_hs__c.field-meta.xml
<CustomField>
    <fullName>StorageStatus_hs__c</fullName>
    <label>保管状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>作業スペースOK</fullName>
            </value>
            <value>
                <fullName>作業スペースNG　押し出し手伝いOK</fullName>
            </value>
            <value>
                <fullName>作業スペースNG　押し出し手伝いNG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>