force-app/main/default/objects/WorkExchange__c/fields/Tire__c.field-meta.xml
<CustomField>
    <fullName>Tire__c</fullName>
    <label>タイヤ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>転がる</fullName>
            </value>
            <value>
                <fullName>転がらない</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>