force-app/main/default/objects/WorkExchange__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <description>買取商談[TransferDate__c]</description>
    <label>振込日</label>
    <type>Date</type>
</CustomField>