force-app/main/default/objects/WorkExchange__c/fields/txtCarType__c.field-meta.xml
<CustomField>
    <fullName>txtCarType__c</fullName>
    <formula>CarTypes__r.Name</formula>
    <label>車種名</label>
    <type>Text</type>
</CustomField>