force-app/main/default/objects/WorkExchange__c/fields/VehicleClassification__c.field-meta.xml
<CustomField>
    <fullName>VehicleClassification__c</fullName>
    <label>ABC区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>はなまるオークション/他社AA（営業）</fullName>
            </value>
            <value>
                <fullName>はなまるオークション/他社AA（コール）</fullName>
            </value>
            <value>
                <fullName>リユースオークション</fullName>
            </value>
            <value>
                <fullName>直接商談</fullName>
            </value>
            <value>
                <fullName>直売</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>