force-app/main/default/objects/WorkExchange__c/fields/VehicleCondition_hs__c.field-meta.xml
<CustomField>
    <fullName>VehicleCondition_hs__c</fullName>
    <label>損傷備考</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>