force-app/main/default/objects/WorkExchange__c/fields/VehicleInspection__c.field-meta.xml
<CustomField>
    <fullName>VehicleInspection__c</fullName>
    <label>車検有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>車検あり（名変可）</fullName>
            </value>
            <value>
                <fullName>車検あり（抹消条件）</fullName>
            </value>
            <value>
                <fullName>車検切れ</fullName>
            </value>
            <value>
                <fullName>抹消済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>