force-app/main/default/objects/WorkExchange__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PurchaseReception_LOT__c</columns>
    <columns>Name_Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>